Fixed fonts overriding issue, horizontal scrollbar, removed unnecessary styles.

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Roboto|Raleway');
+
+html, button, input, select, textarea, .pure-g [class *= "pure-u"] {
+    font-family: 'Raleway', sans-serif !important;
+}
 
 body {
     background: #f1efef;
@@ -13,13 +17,10 @@ main {
     max-width:960px;
     margin:3em auto 0;
     background:#ffffff;
-    /*flex-direction:row-reverse;*/
     color: #8c8787;
-    font-family: 'Roboto', sans-serif;
     -webkit-box-shadow: 1px 1px 10px 2px rgba(0,0,0,0.33);
     -moz-box-shadow: 1px 1px 10px 2px rgba(0,0,0,0.33);
     box-shadow: 1px 1px 10px 2px rgba(0,0,0,0.33);
-    position:relative;
 }
 
 #l_section img.brand {
@@ -29,6 +30,7 @@ main {
 #l_section h1 {
     margin:5rem 0 1rem 2rem;
     font-size:1.5rem;
+    font-family: 'Roboto', sans-serif;
 }
 
 #l_section h1 span.brand-name {
@@ -100,6 +102,7 @@ main {
 #l_section p.toc-notice {
 	font-size:0.8rem;
 	margin-right:2rem;
+    line-height:1.3rem;
 }
 
 #r_section {
@@ -183,25 +186,6 @@ main {
     transform: rotate(-45deg);
 }
 
-.custom-menu-screen {
-    -webkit-transition: all 0.5s;
-    -moz-transition: all 0.5s;
-    -ms-transition: all 0.5s;
-    transition: all 0.5s;
-    height: 3em;
-    width: 70em;
-    position: absolute;
-    top: 0;
-    z-index: -1;
-}
-
-.custom-menu-tucked .custom-menu-screen {
-    -webkit-transform: translateY(-44px);
-    -moz-transform: translateY(-44px);
-    -ms-transform: translateY(-44px);
-    transform: translateY(-44px);
-}
-
 @media screen and (max-width: 48em){
     main {
         margin:0;
@@ -231,7 +215,7 @@ main {
 
     .custom-menu-bottom {
         position: absolute;
-        width: 100%;
+        width: 95%;
         background-color: transparent;
         z-index: 100;
     }
